--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Jason's Blog</a>
                 <button class="navbar-toggler"
                         type="button"
                         data-bs-toggle="collapse"
