--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
-            {% for post in posts%}
+            {% for post in blog_posts%}
             <!-- Post preview-->
             <div class="post-preview">
                 <a href="{{ url_for('show_post', index=post.id)}}">
