--- a/templates/header.html
+++ b/templates/header.html
@@ -44,6 +44,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="/">Start Bootstrap</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -66,6 +67,7 @@
               >
             </li>
             <!-- TODO: Only show Login/Register if user is logged out. Otherwise show "Log Out" -->
+            {%if not current_user.is_authenticated: %}
             <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
@@ -80,6 +82,7 @@
                 >Register</a
               >
             </li>
+            {%else: %}
             <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
@@ -87,6 +90,7 @@
                 >Log Out</a
               >
             </li>
+            {%endif%}
             <li class="nav-item">
               <a
                 class="nav-link px-lg-3 py-3 py-lg-4"
@@ -102,7 +106,7 @@
               >
             </li>
           </ul>
-        </div>
+        </div> 
       </div>
     </nav>
   </body>
